Fix CBPanelView z-index

--- a/classes/Colby/Colby.css
+++ b/classes/Colby/Colby.css
@@ -5,7 +5,7 @@
     position: fixed;
     right: 0;
     top: 0;
-    z-index: 1000;
+    z-index: 1500; /* CBPanels should only be used for error messages */
 }
 
 .CBPanelContainer {
